Bug 463572 - --auto option does not work as described
Summary: --auto option does not work as described
Status: RESOLVED FIXED
Alias: None
Product: kdiff3
Classification: Applications
Component: application (other bugs)
Version First Reported In: 1.9.6
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: michael
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-29 00:47 UTC by svist
Modified: 2023-03-27 17:10 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 10.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description svist 2022-12-29 00:47:16 UTC
SUMMARY
Help for --auto option says "No GUI if all conflicts are auto-solvable." -- but it still shows the UI with "Number of unsolved conflicts: 0" dialog, waiting for UI interaction.

sample command line:
/usr/bin/kdiff3 --auto --L1 base --L2 local --L3 other /tmp/~base.ts /tmp/~local.ts /tmp/~other.ts -o /src/[...]/myfile.ts


STEPS TO REPRODUCE
1. Prepare 3 files for merge with all diffs auto-resolvable. Example:
FILE1:
foo
bar

FILE2:
foo
1
bar

FILE3
foo
bar
2

2. run kdiff --auto FILE1 FILE2 FILE3 -o RESULT

OBSERVED RESULT
UI dialog is shown, saying "Number of unsolved conflicts: 0" -- and waiting for user to click "OK"

EXPECTED RESULT
No UI interactions needed, only command line

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Debian-based custom distro
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 michael 2023-03-27 17:08:52 UTC
Git commit 34d36270c926a05e08391e623ecf3fae044c3a26 by Michael Reeves.
Committed on 27/03/2023 at 16:41.
Pushed by mreeves into branch '1.10'.

Don't show confilcts dialog in auto mode when all are solved
FIXED-IN:10.0.1
(cherry picked from commit ce272265a414b05ccd87110ab24dd3610c3d15e6)

M  +5    -3    src/mergeresultwindow.cpp
M  +1    -1    src/mergeresultwindow.h
M  +1    -1    src/pdiff.cpp

https://invent.kde.org/sdk/kdiff3/commit/34d36270c926a05e08391e623ecf3fae044c3a26
Comment 2 michael 2023-03-27 17:10:23 UTC
Git commit 349ce6f1caf17fefad9598928c02026a4a6545d1 by Michael Reeves.
Committed on 27/03/2023 at 17:08.
Pushed by mreeves into branch 'master'.

Don't show confilcts dialog in auto mode when all are solved
FIXED-IN:10.0.1

M  +5    -3    src/mergeresultwindow.cpp
M  +1    -1    src/mergeresultwindow.h
M  +1    -1    src/pdiff.cpp

https://invent.kde.org/sdk/kdiff3/commit/349ce6f1caf17fefad9598928c02026a4a6545d1