Don't show confilcts dialog in auto mode when all are solved

BUG:463572
FIXED-IN:10.0.1
(cherry picked from commit ce272265a414b05ccd87110ab24dd3610c3d15e6)